Adding assignment editor

--- a/src/Kanbas/styles.css
+++ b/src/Kanbas/styles.css
@@ -26,4 +26,12 @@ body * {  font-family: Arial, Helvetica, sans-serif;  }
   .wd-lesson {
     border-left: 3px solid green !important;
   }
-  
+  .wd-assignment-list-item {
+    border-left: 3px solid green !important;
+  }
+  .bold-text {
+    font-weight: bold;
+  }
+  .green-icon {
+    color: green;
+  }
