--- a/src/Kanbas/styles.css
+++ b/src/Kanbas/styles.css
@@ -29,6 +29,9 @@ body * {  font-family: Arial, Helvetica, sans-serif;  }
   .wd-assignment-list-item {
     border-left: 3px solid green !important;
   }
+  .wd-quizz-list-item {
+    border-left: 3px solid green !important;
+  }
   .bold-text {
     font-weight: bold;
   }
