--- a/src/Kanbas/styles.css
+++ b/src/Kanbas/styles.css
@@ -38,3 +38,19 @@ body * {  font-family: Arial, Helvetica, sans-serif;  }
   .green-icon {
     color: green;
   }
+
+  .quiz-title {
+    font-weight: bold;
+    font-size: 1.5rem;
+    margin-bottom: 20px;
+  }
+  
+  .quiz-details {
+    margin-top: 20px;
+  }
+  
+  .row .col-md-6 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
